Performance and physics improvements, WebKit card in intro

--- a/app/backdrop/style.css
+++ b/app/backdrop/style.css
@@ -23,6 +23,10 @@
 	background-color: #323292;
 }
 
+.backdrop.west-side {
+	background-color: #1e1659;
+}
+
 .backdrop::before {
 	content: ' ';
 	display: block;
