--- a/app/actor/point-actor.css
+++ b/app/actor/point-actor.css
@@ -143,12 +143,16 @@
 
 .actor-item.actor-ring .sprite {
 	background-image: url(/Sonic/rings.png);
-
-	--sprite-offset-x: -24px;
-	--sprite-offset-y: -152px;
+	--sprite-offset-x: -16px;
+	--sprite-offset-y: -144px;
 	animation: ringSpin steps(4) infinite;
 	animation-duration: calc(1ms * 350);
 	transition: opacity 0.25s ease-in;
+}
+
+.actor-item.actor-ring.decoration .sprite {
+	--sprite-offset-x: -24px;
+	--sprite-offset-y: -151px;
 }
 
 .actor-item.actor-ring {
