--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -287,7 +287,7 @@ section.filters {
 
 .viewport-background {
 	/*transform: translate(calc(1px * var(--xMod)), calc(1px * var(--yMod)));*/
-	transform: translate3d(0,0,0);
+	transform: translate3d(calc(-1px * var(--offsetX, 0)),calc(-1px * var(--offsetY, 0)),0);
 	display: flex;
 	justify-content: center;
 	align-items: center;
