--- a/app/viewport/viewport-theme-construct.css
+++ b/app/viewport/viewport-theme-construct.css
@@ -5,9 +5,10 @@
 .viewport.construct .viewport-background[data-name^="Moving"] > div,
 .viewport.construct .viewport-background[data-name^="Destructible"] > div,
 .viewport.construct .viewport-background[data-name^="Collision"] > div {
-	/*border: 1px solid #050;*/
 	filter: invert(0.15);
 	box-shadow: inset 0 0 2px rgba(0,255,0,0.5), 0 0 2px rgba(0,255,0,0.5);
+
+
 	/*--distX: calc(calc(calc(var(--screenX)*var(--screenX))*var(--screenX))*var(--screenX));
 	--distY: calc(calc(calc(var(--screenY)*var(--screenY))*var(--screenY))*var(--screenY));
 	--dist: calc(var(--distX)*var(--distY));*/
@@ -27,4 +28,9 @@
 		drop-shadow( 1px  1px 0px var(--outline-color))
 		drop-shadow( 1px -1px 0px var(--outline-color))
 	;*/
+}
+
+
+.viewport.construct .viewport-background > div::after {
+	/*content: attr(data-mapX);*/
 }
