--- a/app/region/shade-region.css
+++ b/app/region/shade-region.css
@@ -30,8 +30,7 @@
 .region.region-shade .region-filter-wrapper,
 .region.region-shade .sprite {
 	position: absolute;
-	width: calc(1px * var(--width));
-	height: calc(1px * var(--height));
+
 	pointer-events: none;
 	z-index: 5000000;
 }
@@ -45,8 +44,8 @@
 
 .region.region-shade .region-color-wrapper,
 .region.region-shade .sprite {
-	top: calc(1px + calc(-1px * var(--height)));
-	left: -16px;
+	/*top: calc(1px + calc(-1px * var(--height)));
+	left: -16px;*/
 	background-attachment: fixed;
 }
 
@@ -55,7 +54,7 @@
 
 	left:    0;
 	top:     0;
-	width:   calc(100% + 128px);
+	/*width:   calc(100% + 128px);*/
 	height:  calc(100% + 128px);
 	/*width:   calc(var(--viewportWidth));
 	height:  calc(var(--viewportHeight) + 128px);*/
@@ -176,11 +175,11 @@
 }
 
 .region.region-shade.heat .region-filter {
-	filter: brightness(4) url(#waves) blur(0.5px) url(#waves) contrast(1.25);
+	filter: brightness(1.2) url(#waves) blur(0.5px);
 	backdrop-filter:
 		drop-shadow(0px -0.25px  0.5px rgba(255, 255,  32, 0.333))
 		drop-shadow(0px -0.50px  0.5px  rgba(255, 64,  32, 0.25))
-		drop-shadow(0px -1.25px  1.00px rgba(128, 0,   0,  0.5))
+		drop-shadow(0px -1.25px  1.00px rgba(128, 32,   0,  0.5))
 		drop-shadow(0px -1.50px  1.50px rgba(0,   0,   0,  0.5));
 }
 
